--- a/q/85786.html
+++ b/q/85786.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>038</td><td>Ruby rmatrix</td><td>240824T162421Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275130#275130">Jordan</a></td></tr>
-<tr d-ix="1"><td>011</td><td>Uiua</td><td>240824T154539Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275129#275129">nyxbird</a></td></tr>
-<tr d-ix="2"><td>006</td><td>Japt x</td><td>240824T092859Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275124#275124">Shaggy</a></td></tr>
+<tr d-ix="0"><td>006</td><td>Japt x</td><td>240824T092859Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275124#275124">Shaggy</a></td></tr>
+<tr d-ix="1"><td>038</td><td>Ruby rmatrix</td><td>240824T162421Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275130#275130">Jordan</a></td></tr>
+<tr d-ix="2"><td>011</td><td>Uiua</td><td>240824T154539Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275129#275129">nyxbird</a></td></tr>
 <tr d-ix="3"><td>037</td><td>Wolfram Language Mathematica</td><td>191113T022113Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195783#195783">att</a></td></tr>
 <tr d-ix="4"><td>015</td><td>Brachylog</td><td>191111T102203Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195691#195691">Unrelate</a></td></tr>
 <tr d-ix="5"><td>024</td><td>k4</td><td>160723T022554Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/86367#86367">Aaron Da</a></td></tr>
@@ -49,14 +49,27 @@
 <tr d-ix="20"><td>046</td><td>JavaScript</td><td>160719T124213Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85791#85791">Neil</a></td></tr>
 <tr d-ix="21"><td>015</td><td>J</td><td>160719T125702Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85793#85793">miles</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a> <code>-rmatrix</code>, 38 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, <s>7</s> 6 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p>0-indexed</p>
+<pre><code>ËfÈ¶E°
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LXg&amp;code=y2bItkWw&amp;input=W1swLDMsMCw0XSxbMCw0LDEsNF0sWzQsMywxLDJdLFstMiw0LC0yLC0xXV0" rel="nofollow noreferrer">Try it</a></p>
+<pre><code>ËfÈ¶E°     :Implicit input of 2D-array
+Ë          :Map each array at index E
+ f         :  Filter by
+  È        :  Passing each number through the following function
+   ¶       :    Is equal to
+    E°     :    Posfix incremented E
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a> <code>-rmatrix</code>, 38 bytes</h1>
 <p>Takes a Matrix object as input (<code>m</code>). (Alas,
 The space after <code>_1</code> is required.)</p>
 <pre class="lang-ruby prettyprint-override"><code>m.each_with_index.sum{_2+_3==_1 ?_1:0}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpck20km5RbmJJUWaFUuxNz1wFWwVfMC862kBHwVhHAUiaxOpwgXgmOgqGUJ4JWA7IMwLxdI3AkiBK1zA2lqtAIWZpaUmarsVNtVy91MTkjPjyzJKM-My8lNQKveLS3Op4I-14Y1vbeEMF-3hDK4NaiOoFUApKAwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 11 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 11 bytes</h1>
 <pre><code>/+⊡⊚=≡≡/+°⊡.
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_13_0-dev_1__ZiDihpAgLyviiqHiipo94omh4omhLyvCsOKKoS4KZltbXV0KZltbMl1dCmZbWzEgNSAyXQogIFs5IDQgMl0KICBbNSA5IDZdXQpmW1swIDMgMCA0XQogIFswIDQgMSA0XQogIFs0IDMgMSAyXQogIFvCrzIgNCDCrzIgwq8xXV0KZltbMyDCrzEgMyAzXQogIFszIMKvMSAzIDFdXQo=" rel="nofollow noreferrer">Try it!</a></p>
@@ -66,12 +79,6 @@ The space after <code>_1</code> is required.)</p>
   ⊡⊚=       . # pick-where-equal
 /+             # sum
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, <s>7</s> 6 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<p>0-based</p>
-<pre><code>ËfÈ¶E°
-</code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LXg&amp;code=y2bItkWw&amp;input=W1swLDMsMCw0XSxbMCw0LDEsNF0sWzQsMywxLDJdLFstMiw0LC0yLC0xXV0" rel="nofollow noreferrer">Try it</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>42</s> 37 bytes</h1>
 <pre><code>Tr[Pick[#2,Tr@#,#2]&amp;@@@ArrayRules@#]&amp;
