--- a/q/275101.html
+++ b/q/275101.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>049</td><td>Desmos</td><td>240823T022855Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275106#275106">Lucenapo</a></td></tr>
-<tr d-ix="1"><td>061</td><td>Python</td><td>240824T064748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275122#275122">Albert.L</a></td></tr>
+<tr d-ix="0"><td>059</td><td>Python</td><td>240824T064748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275122#275122">Albert.L</a></td></tr>
+<tr d-ix="1"><td>049</td><td>Desmos</td><td>240823T022855Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275106#275106">Lucenapo</a></td></tr>
 <tr d-ix="2"><td>023</td><td>Charcoal</td><td>240822T232814Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275103#275103">Neil</a></td></tr>
 <tr d-ix="3"><td>011</td><td>Jelly</td><td>240824T005346Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275120#275120">Jonathan</a></td></tr>
 <tr d-ix="4"><td>073</td><td>Python 3</td><td>240823T235659Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275119#275119">xnor</a></td></tr>
@@ -38,20 +38,20 @@
 <tr d-ix="9"><td>015</td><td>05AB1E</td><td>240823T075842Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275108#275108">Kevin Cr</a></td></tr>
 <tr d-ix="10"><td>055</td><td>JavaScript Node.js</td><td>240823T004341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275105#275105">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.desmos.com/calculator/" rel="nofollow noreferrer">Desmos</a>, 49 bytes</h1>
-<pre><code>f(a,b,c,d)=∑_{x=a}^b∑_{y=c}^d((x+y)^2+3x+y)/2
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <strike>61</strike> 59 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>f=lambda a,b,c,d:c&lt;d and((c+b)**3-b)/6+b*c-f(b,a,c+(b&lt;a),d)
 </code></pre>
-<p>Order: inclusiveLeftX, inclusiveRightX, inclusiveTopY, inclusiveBottomY</p>
-<p><a href="https://www.desmos.com/calculator/ttfthpbcoi" rel="nofollow noreferrer">Try it online</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 61 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>f=lambda a,b,c,d:c&lt;d and((c+b)**3-b-c)/6+b*c-f(b,a,c+(b&lt;a),d)
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=LY1BTsMwEEX3PsVI3diZCXicJoSo4QS9ASCw40ZESuOoBCTOwqYSgjv1NtgQzWak9_Xe58_8sbyE6fzVtw_fb0uf15e2b0d7dN6CJUcd-abbebCTl7JDp7KsyF3eqesKXdblvXRkqUPpdlaRV6vkuQ8n2MMwQZgPk9SqETDQEwVoYX_1Oo_DItV9UzwKkGtG_cGjneXh3Y4kBwpKCZhPw7TIXqYIx6VHjsu1c74ETZqYDOR3YDRsNBoskXGLtTARVcQJ8TayAm-wQmZkjRyfEo1Bw2huRTTEK9K0ZNjUyAWyQa5F8sdLJOn_u78" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=LY1BTsMwEEX3PsVI3diZCXicJoTQcILeABC141pESuOoBCTOwqYSgjv1NjhQzWak9_Xe58_0Mb_E8fQV2sfvtznk9fkutIM9OG_BkqOOfNNtPNjRS9mhU1lW5E5dV-iyLg_SkaUOpdtYRV5dFLsQj7CFfoQ47UepVSOgp2eK0ML26nUa-lmqh6Z4EiAvEfUHD3aS-3c7kOwpKiVgOvbjLINcIpyWHjktL53TOWrSxGQgvwejYaXRYImMa6yFSagiXhCvEyvwBitkRtbI6SnRGDSM5lYkQ7pimZYMqxq5QDbItVj86Ray6P-7vw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes top incl, bottom excl, left incl, right excl.</p>
 <h2>How?</h2>
 <p>Just seeing that @Jonathan Allan scooped me on this insight.</p>
 <p>Based on the observation that the first column are just triangle numbers. Its partial sums are tetrahedral numbers and we can compute the sum of the first column as <span class="math-container">\$(\begin{smallmatrix}{\rm bottom}\\3\end{smallmatrix})-(\begin{smallmatrix}{\rm top}\\3\end{smallmatrix})\$</span>. As for other columns, they are just shifted up and have a constant offset added, for example, the second column is the same as the first, except each value is shifted upwards one grid unit and incremented by one.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.desmos.com/calculator/" rel="nofollow noreferrer">Desmos</a>, 49 bytes</h1>
+<pre><code>f(a,b,c,d)=∑_{x=a}^b∑_{y=c}^d((x+y)^2+3x+y)/2
+</code></pre>
+<p>Order: inclusiveLeftX, inclusiveRightX, inclusiveTopY, inclusiveBottomY</p>
+<p><a href="https://www.desmos.com/calculator/ttfthpbcoi" rel="nofollow noreferrer">Try it online</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>26</s> 23 bytes</h1>
 <pre><code>≔…ＮＮθＩΣＥ…ＮＮΣＥθ⁺λΣ…·⁰⁺ιλ
