--- a/q/85786.html
+++ b/q/85786.html
@@ -26,19 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>006</td><td>Japt x</td><td>240824T092859Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275124#275124">Shaggy</a></td></tr>
-<tr d-ix="1"><td>038</td><td>Ruby rmatrix</td><td>240824T162421Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275130#275130">Jordan</a></td></tr>
-<tr d-ix="2"><td>011</td><td>Uiua</td><td>240824T154539Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275129#275129">nyxbird</a></td></tr>
-<tr d-ix="3"><td>037</td><td>Wolfram Language Mathematica</td><td>191113T022113Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195783#195783">att</a></td></tr>
-<tr d-ix="4"><td>015</td><td>Brachylog</td><td>191111T102203Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195691#195691">Unrelate</a></td></tr>
-<tr d-ix="5"><td>024</td><td>k4</td><td>160723T022554Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/86367#86367">Aaron Da</a></td></tr>
-<tr d-ix="6"><td>048</td><td>Matlab/Octave</td><td>160720T145050Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85961#85961">SpamBot</a></td></tr>
-<tr d-ix="7"><td>021</td><td>Actually</td><td>160720T101159Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85931#85931">user4594</a></td></tr>
-<tr d-ix="8"><td>010</td><td>MATL</td><td>160719T122926Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85789#85789">Luis Men</a></td></tr>
-<tr d-ix="9"><td>024</td><td>R</td><td>160720T074956Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85919#85919">plannapu</a></td></tr>
-<tr d-ix="10"><td>063</td><td>Ruby</td><td>160720T040535Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85905#85905">David Lj</a></td></tr>
-<tr d-ix="11"><td>059</td><td>PHP</td><td>160719T172040Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85832#85832">Titus</a></td></tr>
-<tr d-ix="12"><td>057</td><td>Python 2  60</td><td>160719T145834Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85815#85815">Jeremy</a></td></tr>
+<tr d-ix="0"><td>057</td><td>Python 2  60</td><td>160719T145834Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85815#85815">Jeremy</a></td></tr>
+<tr d-ix="1"><td>006</td><td>Japt x</td><td>240824T092859Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275124#275124">Shaggy</a></td></tr>
+<tr d-ix="2"><td>038</td><td>Ruby rmatrix</td><td>240824T162421Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275130#275130">Jordan</a></td></tr>
+<tr d-ix="3"><td>011</td><td>Uiua</td><td>240824T154539Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275129#275129">nyxbird</a></td></tr>
+<tr d-ix="4"><td>037</td><td>Wolfram Language Mathematica</td><td>191113T022113Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195783#195783">att</a></td></tr>
+<tr d-ix="5"><td>015</td><td>Brachylog</td><td>191111T102203Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195691#195691">Unrelate</a></td></tr>
+<tr d-ix="6"><td>024</td><td>k4</td><td>160723T022554Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/86367#86367">Aaron Da</a></td></tr>
+<tr d-ix="7"><td>048</td><td>Matlab/Octave</td><td>160720T145050Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85961#85961">SpamBot</a></td></tr>
+<tr d-ix="8"><td>021</td><td>Actually</td><td>160720T101159Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85931#85931">user4594</a></td></tr>
+<tr d-ix="9"><td>010</td><td>MATL</td><td>160719T122926Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85789#85789">Luis Men</a></td></tr>
+<tr d-ix="10"><td>024</td><td>R</td><td>160720T074956Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85919#85919">plannapu</a></td></tr>
+<tr d-ix="11"><td>063</td><td>Ruby</td><td>160720T040535Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85905#85905">David Lj</a></td></tr>
+<tr d-ix="12"><td>059</td><td>PHP</td><td>160719T172040Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85832#85832">Titus</a></td></tr>
 <tr d-ix="13"><td>070</td><td>Lua</td><td>160719T154957Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85821#85821">Leaky Nu</a></td></tr>
 <tr d-ix="14"><td>012</td><td>APL</td><td>160719T151653Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85817#85817">Leaky Nu</a></td></tr>
 <tr d-ix="15"><td>043</td><td>PowerShell v2+</td><td>160719T151815Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85818#85818">AdmBorkB</a></td></tr>
@@ -49,7 +49,13 @@
 <tr d-ix="20"><td>046</td><td>JavaScript</td><td>160719T124213Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85791#85791">Neil</a></td></tr>
 <tr d-ix="21"><td>015</td><td>J</td><td>160719T125702Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85793#85793">miles</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, <s>7</s> 6 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1>Python 2 - <del>60</del> 57 bytes</h1>
+<p>It's a code snippet, so it would be a few more bytes if I actually returned the value, I guess.
+<code>e=enumerate;sum(i*(x+y==i)for x,r in e(a)for y,i in e(r))</code></p>
+<p>Thanks for the help Leaky Nun :-)</p>
+<p>Quick explanation. <code>a</code> is an array holding numbers. Simply iterate through indexes and sum up all values where the value equals the sum of the index.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, <s>7</s> 6 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>0-indexed</p>
 <pre><code>ËfÈ¶E°
 </code></pre>
@@ -62,14 +68,14 @@
     E°     :    Posfix incremented E
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a> <code>-rmatrix</code>, 38 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a> <code>-rmatrix</code>, 38 bytes</h1>
 <p>Takes a Matrix object as input (<code>m</code>). (Alas,
 The space after <code>_1</code> is required.)</p>
 <pre class="lang-ruby prettyprint-override"><code>m.each_with_index.sum{_2+_3==_1 ?_1:0}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpck20km5RbmJJUWaFUuxNz1wFWwVfMC862kBHwVhHAUiaxOpwgXgmOgqGUJ4JWA7IMwLxdI3AkiBK1zA2lqtAIWZpaUmarsVNtVy91MTkjPjyzJKM-My8lNQKveLS3Op4I-14Y1vbeEMF-3hDK4NaiOoFUApKAwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 11 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 11 bytes</h1>
 <pre><code>/+⊡⊚=≡≡/+°⊡.
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_13_0-dev_1__ZiDihpAgLyviiqHiipo94omh4omhLyvCsOKKoS4KZltbXV0KZltbMl1dCmZbWzEgNSAyXQogIFs5IDQgMl0KICBbNSA5IDZdXQpmW1swIDMgMCA0XQogIFswIDQgMSA0XQogIFs0IDMgMSAyXQogIFvCrzIgNCDCrzIgwq8xXV0KZltbMyDCrzEgMyAzXQogIFszIMKvMSAzIDFdXQo=" rel="nofollow noreferrer">Try it!</a></p>
@@ -80,7 +86,7 @@ The space after <code>_1</code> is required.)</p>
 /+             # sum
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>42</s> 37 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>42</s> 37 bytes</h1>
 <pre><code>Tr[Pick[#2,Tr@#,#2]&amp;@@@ArrayRules@#]&amp;
 </code></pre>
 <p><a href="https://tio.run/##LYvLCsIwEEX3@Qoh0NUEm0eFLpT4B0W6C12E0mLQuohxISHfHsc0m7ln7pnZbLgvmw1utnk959Gbwc0PQwWMXlOgYmq01lfv7ff2eS5vTacmD969gqHssv7Xo44kJiAxilSCQwcC6RB7UJU66OG06xYktKBKjQm8ssKe13MmUOBgfP@RSKhlkXVBRVL@AQ" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -90,7 +96,7 @@ The space after <code>_1</code> is required.)</p>
 Tr[                                ]    sum
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 15 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 15 bytes</h1>
 
 <pre><code>{iiʰI-ʰ=∧Ihh}ᶠ+
 </code></pre>
@@ -107,7 +113,7 @@ Tr[                                ]    sum
      -ʰ            the value of the element minus its index within the row.
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>k4, 24 bytes</h1>
+<div id="pu6" class="pu"><h1>k4, 24 bytes</h1>
 
 <p>Assumes the matrix is stored in <code>m</code>.</p>
 
@@ -116,7 +122,7 @@ Tr[                                ]    sum
 
 <p>This is one of those puzzles where the simplifications involved in designing k from APL (and J) really hurt—k’s <code>!</code> is the equivalent of APL’s <code>⍳</code> but only works on vectors, so I have to assemble the matrix of indices myself; inner product is one character in APL but five in k; and I lose three characters to handling the empty matrix properly because k doesn’t have strongly-typed matrices.</p>
 </div>
-<div id="pu6" class="pu"><h1>Matlab/Octave, 48 bytes</h1>
+<div id="pu7" class="pu"><h1>Matlab/Octave, 48 bytes</h1>
 <p>1-indexed.</p>
 <p>Will not handle the first test case because <code>[1:0]</code> has size 1x0 for some reason</p>
 <pre><code>sum(sum(M.*(M-[1:size(M,1)]'-[1:size(M,2)]==0)))
@@ -133,7 +139,7 @@ M = [ 3 -1 3 3; 3 -1 3 1]
 sum(sum(M.*(M-[1:size(M,1)]'-[1:size(M,2)]==0)))
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h2>Actually, 21 bytes</h2>
+<div id="pu8" class="pu"><h2>Actually, 21 bytes</h2>
 <pre><code>ñ`i╗ñ&quot;i╜+@;(=*&quot;£Mi`MΣ
 </code></pre>
 <p><a href="http://actually.tryitonline.net/#code=w7FgaeKVl8OxImnilZwrQDsoPSoiwqNNaWBNzqM&amp;input=W1swLDMsMCw0XSxbMCw0LDEsNF0sWzQsMywxLDJdLFstMiw0LC0yLC0xXV0" rel="nofollow noreferrer">Try it online!</a></p>
@@ -154,7 +160,7 @@ sum(sum(M.*(M-[1:size(M,1)]'-[1:size(M,2)]==0)))
                     Σ  sum the values
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>15</s> <s>14</s> 10 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>15</s> <s>14</s> 10 bytes</h1>
 <pre><code>3#fbb+y=*s
 </code></pre>
 <p>The input has rows separated by <code>;</code>. For example: <code>[1 5 2; 9 4 2; 5 9 6]</code>. 1-based indexing is used.</p>
@@ -178,7 +184,7 @@ s      % Sum of array
        %   Stack contains: 3
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1>R, 24 bytes</h1>
+<div id="pu10" class="pu"><h1>R, 24 bytes</h1>
 
 <pre><code>sum(M[M==row(M)+col(M)])
 </code></pre>
@@ -223,7 +229,7 @@ Test cases:</p>
 [1] 3
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1>Ruby, 63 bytes</h1>
+<div id="pu11" class="pu"><h1>Ruby, 63 bytes</h1>
 
 <p>With z as a two-dimensional array of numbers:</p>
 
@@ -244,7 +250,7 @@ z=z.flatten
 <pre><code>(1..x).to_a.product((1..y).to_a).zip(z).inject(0){|s,n|s+(n[0][0]+n[0][1]==n[1]+2?n[1]:0)}
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h1>PHP, 59 bytes</h1>
+<div id="pu12" class="pu"><h1>PHP, 59 bytes</h1>
 <pre><code>foreach($a as$y=&gt;$r)foreach($r as$x=&gt;$v)$s+=($v==$x+$y)*$v;
 </code></pre>
 <p>expects array $a defined; must be empty or 2-dimensional, 0-indexed.<br />
@@ -269,12 +275,6 @@ while($samples)
     test($a,'B1:'.array_shift($samples),'B1:'.f1($a));
 }
 </code></pre>
-</div>
-<div id="pu12" class="pu"><h1>Python 2 - <del>60</del> 57 bytes</h1>
-<p>It's a code snippet, so it would be a few more bytes if I actually returned the value, I guess.
-<code>e=enumerate;sum(i*(x+y==i)for x,r in e(a)for y,i in e(r))</code></p>
-<p>Thanks for the help Leaky Num :-)</p>
-<p>Quick explanation. <code>a</code> is an array holding numbers. Simply iterate through indexes and sum up all values where the value equals the sum of the index.</p>
 </div>
 <div id="pu13" class="pu"><h1>Lua, 70 bytes</h1>
 
