--- a/q/275101.html
+++ b/q/275101.html
@@ -26,19 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>059</td><td>Python</td><td>240824T064748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275122#275122">Albert.L</a></td></tr>
-<tr d-ix="1"><td>049</td><td>Desmos</td><td>240823T022855Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275106#275106">Lucenapo</a></td></tr>
-<tr d-ix="2"><td>023</td><td>Charcoal</td><td>240822T232814Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275103#275103">Neil</a></td></tr>
-<tr d-ix="3"><td>011</td><td>Jelly</td><td>240824T005346Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275120#275120">Jonathan</a></td></tr>
-<tr d-ix="4"><td>073</td><td>Python 3</td><td>240823T235659Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275119#275119">xnor</a></td></tr>
-<tr d-ix="5"><td>068</td><td>Python 3.8 prerelease</td><td>240822T230304Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275102#275102">squarero</a></td></tr>
-<tr d-ix="6"><td>036</td><td>APL+WIN</td><td>240823T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275115#275115">Graham</a></td></tr>
-<tr d-ix="7"><td>075</td><td>Python 3</td><td>240823T134305Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275111#275111">ovs</a></td></tr>
-<tr d-ix="8"><td>060</td><td>C gcc</td><td>240823T125217Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275110#275110">jdt</a></td></tr>
-<tr d-ix="9"><td>015</td><td>05AB1E</td><td>240823T075842Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275108#275108">Kevin Cr</a></td></tr>
-<tr d-ix="10"><td>055</td><td>JavaScript Node.js</td><td>240823T004341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275105#275105">l4m2</a></td></tr>
+<tr d-ix="0"><td>053</td><td>Haskell</td><td>240824T203417Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275133#275133">DPD-</a></td></tr>
+<tr d-ix="1"><td>059</td><td>Python</td><td>240824T064748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275122#275122">Albert.L</a></td></tr>
+<tr d-ix="2"><td>049</td><td>Desmos</td><td>240823T022855Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275106#275106">Lucenapo</a></td></tr>
+<tr d-ix="3"><td>023</td><td>Charcoal</td><td>240822T232814Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275103#275103">Neil</a></td></tr>
+<tr d-ix="4"><td>011</td><td>Jelly</td><td>240824T005346Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275120#275120">Jonathan</a></td></tr>
+<tr d-ix="5"><td>073</td><td>Python 3</td><td>240823T235659Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275119#275119">xnor</a></td></tr>
+<tr d-ix="6"><td>068</td><td>Python 3.8 prerelease</td><td>240822T230304Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275102#275102">squarero</a></td></tr>
+<tr d-ix="7"><td>036</td><td>APL+WIN</td><td>240823T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275115#275115">Graham</a></td></tr>
+<tr d-ix="8"><td>075</td><td>Python 3</td><td>240823T134305Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275111#275111">ovs</a></td></tr>
+<tr d-ix="9"><td>060</td><td>C gcc</td><td>240823T125217Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275110#275110">jdt</a></td></tr>
+<tr d-ix="10"><td>015</td><td>05AB1E</td><td>240823T075842Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275108#275108">Kevin Cr</a></td></tr>
+<tr d-ix="11"><td>055</td><td>JavaScript Node.js</td><td>240823T004341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275105#275105">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <strike>61</strike> 59 bytes</h1>
+<div id="pu0" class="pu"><h1>Haskell, 53 bytes</h1>
+<pre class="lang-hs prettyprint-override"><code>f a b c d=sum$h&lt;$&gt;[a..c]&lt;*&gt;[b..d]
+h r c=sum[1..r+c]+c
+</code></pre>
+<p><a href="https://tio.run/##fc07DsMgEATQ3qeYgiqWEZBPZfsE6VIiCgyxiOJPBLZyfLIcwNEUW8zTTrDp/ZymnEdYDHDwXdpnFlrWa8u5M@2p1wPn3lQBEa60WnIea2dql2f7WtDBrxXw2bfHFu8LGFJYv3RGCIqEQtNAiQOjyNxIkZGXI1SeKJwLuso/YyVkRP4B" rel="nofollow noreferrer">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <strike>61</strike> 59 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>f=lambda a,b,c,d:c&lt;d and((c+b)**3-b)/6+b*c-f(b,a,c+(b&lt;a),d)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LY1BTsMwEEX3PsVI3diZCXicJoTQcILeABC141pESuOoBCTOwqYSgjv1NjhQzWak9_Xe58_0Mb_E8fQV2sfvtznk9fkutIM9OG_BkqOOfNNtPNjRS9mhU1lW5E5dV-iyLg_SkaUOpdtYRV5dFLsQj7CFfoQ47UepVSOgp2eK0ML26nUa-lmqh6Z4EiAvEfUHD3aS-3c7kOwpKiVgOvbjLINcIpyWHjktL53TOWrSxGQgvwejYaXRYImMa6yFSagiXhCvEyvwBitkRtbI6SnRGDSM5lYkQ7pimZYMqxq5QDbItVj86Ray6P-7vw" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -47,13 +54,13 @@
 <p>Just seeing that @Jonathan Allan scooped me on this insight.</p>
 <p>Based on the observation that the first column are just triangle numbers. Its partial sums are tetrahedral numbers and we can compute the sum of the first column as <span class="math-container">\$(\begin{smallmatrix}{\rm bottom}\\3\end{smallmatrix})-(\begin{smallmatrix}{\rm top}\\3\end{smallmatrix})\$</span>. As for other columns, they are just shifted up and have a constant offset added, for example, the second column is the same as the first, except each value is shifted upwards one grid unit and incremented by one.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.desmos.com/calculator/" rel="nofollow noreferrer">Desmos</a>, 49 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.desmos.com/calculator/" rel="nofollow noreferrer">Desmos</a>, 49 bytes</h1>
 <pre><code>f(a,b,c,d)=∑_{x=a}^b∑_{y=c}^d((x+y)^2+3x+y)/2
 </code></pre>
 <p>Order: inclusiveLeftX, inclusiveRightX, inclusiveTopY, inclusiveBottomY</p>
 <p><a href="https://www.desmos.com/calculator/ttfthpbcoi" rel="nofollow noreferrer">Try it online</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>26</s> 23 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>26</s> 23 bytes</h1>
 <pre><code>≔…ＮＮθＩΣＥ…ＮＮΣＥθ⁺λΣ…·⁰⁺ιλ
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/9@xuDgzPU8jKDEvPVXDM6@gtMSvNDcptUhDU0cBhQvkF2pacwUUZeaVaDgnFpdoBJfmavgmFhCnF6a4UEchIKe0WCMHIuSZlwzkZZalQgwxgMpm6ijkaMKB9f//BgpGQGj@X7csBwA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes inputs in the order exclusive column range, exclusive row range e.g. the test case <code>2, 0, 6, 1</code> becomes <code>0 2 2 7</code>. Explanation:</p>
@@ -64,7 +71,7 @@
 </code></pre>
 <p>Map over the exclusive row range, calculating the value of each cell, then double sum over the results.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 11 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 11 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>rŒp+RS+ʋ/€S
 </code></pre>
 <p>A dyadic Link that accepts the top-left coordinate on the left (<code>[row, column]</code>) and the bottom-right coordinate on the right (<code>[row, column]</code>) and yields the sum.</p>
@@ -85,7 +92,7 @@ r           - {[Top, Left]} inclusive range {[Bottom, Right]} (vectorises)
           S - sum
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 73 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 73 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda a,b,c,d:(e:=c-a)*(f:=d-b)*(e*e+f*f+3*(~a-b-c-d)**2-12*(a+c)-17)/24
 </code></pre>
@@ -102,7 +109,7 @@ r           - {[Top, Left]} inclusive range {[Bottom, Right]} (vectorises)
 </code></pre>
 <p><a href="https://tio.run/##NY3bCoMwEESf9SsW@pKYSDWKFItf0vYhN2uoRlFb2q@3m14YGA4zw@70WrvRF4dp3trmvPVyUEaC5IprbmqiU0kTYlKFXiREMsU0MzRJBPt2AT41QhWWminM07yke1Fu7Tj/j4HzcCIZz3jOBeVABGLF84CYoIqAYYCilzqONGvyo0GDHQzyZmF2124F6800Or8uYJ@6vy/uYeNomjEhLfl9o3R7Aw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 99 </s> <s> 79 </s> <s> 74 </s> <s> 73 </s> <s> 70 </s> 68 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 99 </s> <s> 79 </s> <s> 74 </s> <s> 73 </s> <s> 70 </s> 68 bytes</h1>
 <p><em>-20 bytes by removing the auxiliary</em> <code>t</code> <em>lambda, since it was only used once.</em><br />
 <em>-5 bytes thanks to Lucenaposition.</em><br />
 <em>-1 byte thanks to Arnauld.</em><br />
@@ -114,13 +121,13 @@ r           - {[Top, Left]} inclusive range {[Bottom, Right]} (vectorises)
 <p>Takes input like <code>f(inclusiveTopY, exclusiveBottomY, inclusiveLeftX, exclusiveRightX)</code>.<br />
 <a href="https://tio.run/##RcjBDkAgGADgV@lY@Y3lwGzexOUn0aa0ZKuLVw8n3/FzKWyHbTrnsxrGvKOZJJIZJHDsz8vQWCZ@p0qow5NItCUe7bpQjuyb9M9cRJBFZCw7r22gigpooQbxzgM" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1>APL+WIN, 36 bytes</h1>
+<div id="pu7" class="pu"><h1>APL+WIN, 36 bytes</h1>
 <p>Prompts for the 3rd and 4th inter as specified in the examples followed by the 1st and 2nd. Index origin = 0</p>
 <pre><code>+/+/⎕↓n↑(⍳m)⊖⊃(+\⍳m)+⍳¨1+⍳m←2×↑n←1+⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3tv7a@tj5Q6FHb5LxHbRM1HvVuztV81DXtUVezhnYMmKcNJA@tMARRuUB9RoenAxUCFU8ACvVN/Q80het/GpehghGXgYIBVxqXmYIhlxGYZaRgDBZPA8uAMAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3/" rel="noreferrer">Python 3</a>, 75 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3/" rel="noreferrer">Python 3</a>, 75 bytes</h1>
 <p>Just wanted to see how far a closed formula can go. Uses the same inclusive bounds as in the question, in slightly different order.</p>
 
 <pre class="lang-python prettyprint-override"><code>lambda a,b,c,d:(a+~b)*(c+~d)*((a+b)*(b+3*(c+d)/2+5)+d*(2+d+c)-c*~c+a*~-a)/6
@@ -131,14 +138,14 @@ r           - {[Top, Left]} inclusive range {[Bottom, Right]} (vectorises)
 \sum_{x=a}^b \sum_{y=c}^d{x + \frac{\left(x + y\right) (x + y + 1)}2} = \\ \frac{1}{12} (a - b - 1) (c - d - 1) (2 a^2 + a (2 b + 3 c + 3 d + 8) + 2 b^2 + b (3 c + 3 d + 10) + 2 (c^2 + c d + c + d^2 + 2 d))
 $$</span></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 60 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 60 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(x,y,X,Y){x=X?x&lt;X?f(y,x,Y,0)+f(x+1,y,X,Y):0:x-(y+=x)*~y/2;}
 </code></pre>
 <p><a href="https://tio.run/##S9ZNT07@/z9No0KnUidCJ1KzusI2wr7CJsI@TaNSp0InUsdAUxsoq20IlbcysKrQ1ajUtq3Q1Kqr1Deyrv2fmVeikJuYmaehqVDNpQAEBUVAoTQNJdWUmDwlHYU0DQMdBSMwMtfUtAYrKUotKS3KUzCw5qr9DwA" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 <p>Simple port of <a href="https://codegolf.stackexchange.com/a/275105/41374">l4m2's answer</a>.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŸŠŸâεηO`D±;*-}O
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle#comment591648_275102"><em>@l4m2</em>'s comment</a> on <a href="https://codegolf.stackexchange.com/a/275102/52210"><em>@squareroot12621</em>'s Python answer</a>, so make sure to upvote that answer, as well as <a href="https://codegolf.stackexchange.com/a/275105/52210"><em>@l4m2</em>'s Javascript answer</a>!</p>
@@ -164,7 +171,7 @@ $$</span></p>
               # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 55 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 55 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(x,y,X,Y)=&gt;X?x&lt;X&amp;&amp;f(y,x,Y)+f(x+1,y,X,Y):x-(y+=x)*~y/2
 </code></pre>
