--- a/q/275101.html
+++ b/q/275101.html
@@ -41,9 +41,18 @@
 </table>
 <div id="pu0" class="pu"><h1>Haskell, 53 bytes</h1>
 <pre class="lang-hs prettyprint-override"><code>f a b c d=sum$h&lt;$&gt;[a..c]&lt;*&gt;[b..d]
-h r c=sum[1..r+c]+c
+h r c=sum[0..r+c]+c
 </code></pre>
 <p><a href="https://tio.run/##fc07DsMgEATQ3qeYgiqWEZBPZfsE6VIiCgyxiOJPBLZyfLIcwNEUW8zTTrDp/ZymnEdYDHDwXdpnFlrWa8u5M@2p1wPn3lQBEa60WnIea2dql2f7WtDBrxXw2bfHFu8LGFJYv3RGCIqEQtNAiQOjyNxIkZGXI1SeKJwLuso/YyVkRP4B" rel="nofollow noreferrer">Try it online!</a></p>
+<ul>
+<li>the helper function <code>h</code> computes the value for row <code>r</code> and column <code>c</code>
+<ul>
+<li>The value in the first column is equal to the number of elements in the upper triangle, i.e. the (anti-)diagonals above. Each diagonal has one more element than the preceding: <span class="math-container">$$h(r,0) =0+1+2+3+4+...+r=\sum_{i=0}^ri$$</span></li>
+<li>To compute a general element we can compute the leftmost value of its (anti)diagonal (i.e. h(r+c,0)) and then go up by c steps (i.e. sum c): <span class="math-container">$$h(r,c)=h(r+c,0)+c$$</span></li>
+</ul>
+</li>
+<li><code>h&lt;$&gt;[a..c]&lt;*&gt;[b..d]</code> applies <code>h</code> to all pairs (a,b), (a,b+1), ..., (a+1,b), (a+1, b+1,), ..., (c,d)</li>
+</ul>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <strike>61</strike> 59 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>f=lambda a,b,c,d:c&lt;d and((c+b)**3-b)/6+b*c-f(b,a,c+(b&lt;a),d)
