--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240824T204733Z
+"   /golfscore                                      20240824T211306Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/59347.html">Shortest infinite loop producing no output      : 0059347</a>
 <a href="q/275101.html">Calculate the sum of numbers in a rectangle     : 0275101</a>
 <a href="q/85786.html">Dijkstras Challenge                             : 0085786</a>
 <a href="q/17305.html">Transpose a page of text                        : 0017305</a>
