--- a/q/64198.html
+++ b/q/64198.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>194</td><td>Python 2</td><td>151119T003848Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/64255#64255">xnor</a></td></tr>
-<tr d-ix="1"><td>350</td><td>Python 3</td><td>240823T105808Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/275109#275109">A Person</a></td></tr>
+<tr d-ix="0"><td>344</td><td>Python 3</td><td>240823T105808Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/275109#275109">arandomp</a></td></tr>
+<tr d-ix="1"><td>194</td><td>Python 2</td><td>151119T003848Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/64255#64255">xnor</a></td></tr>
 <tr d-ix="2"><td>nan</td><td>Java</td><td>240314T211235Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/271818#271818">Rubinhoo</a></td></tr>
 <tr d-ix="3"><td>312</td><td>Fortran GFortran cpp</td><td>240618T173847Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/273699#273699">roblogic</a></td></tr>
 <tr d-ix="4"><td>259</td><td>nroff</td><td>221019T124355Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/253440#253440">鳴神裁四点一号</a></td></tr>
@@ -202,21 +202,21 @@
 <tr d-ix="173"><td>254</td><td>Matlab</td><td>151118T173034Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/64215#64215">flawr</a></td></tr>
 <tr d-ix="174"><td>269</td><td>PHP</td><td>151118T160655Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/64205#64205">undefine</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 194 bytes</h1>
+<div id="pu0" class="pu"><h2>Python 3, <s>350</s> 344 bytes</h2>
+<p>first golf
+Saved 6 bytes thanks to @emanresuA</p>
+<pre><code>print(&quot;\n&quot;.join([f&quot;&quot;&quot;{i if i!=0 else&quot;No more&quot;} bottle{(i!=1)*&quot;s&quot;} of beer on the wall, {i if i!=0 else&quot;no more&quot;} bottle{(i!=1)*&quot;s&quot;} of beer.
+{&quot;Take one down and pass it around&quot;if i!=0else&quot;Go to the store and buy some more&quot;}, {&quot;no more&quot; if i-1==0else&quot;99&quot;if i==0else i-1} bottle{((i-1)!=1)*&quot;s&quot;} of beer on the wall.
+&quot;&quot;&quot;for i in range(99,-1,-1)]))
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 194 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>i=198
 while i:s=`i/2or 99`+' bottle%s of beer'%'s'[1&lt;i&lt;4:];print['%s, '+s+'.','Take one down and pass it around, %s.\n',&quot;Go to the store and buy some more, %s.&quot;][i%2+1/i]%(s+' on the wall');i-=1
 </code></pre>
 <p><a href="https://tio.run/##HY3BioNAEETv@YoiMPQG3QRlD2sSz/sDezNCRuzFZs20TE@QfL0RoU7Fe1XTKw0aymWRuqi@d/MgI0POVt/lVGpEVd0zQqcpjewM@oeOOZIjo6a4yvXr3F6mKCE15CwHZZbRkXL69f8MDYxe5wAfekzeDJLgoz5Dn8PZ8RYo3/8o0pqBYUkjb2z3fMH0wXiszYbu20ZcmRUnad3H@rFub87sx5EOF/msi2V5Aw" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
 <p>Took the <code>i/2</code> idea from <a href="https://codegolf.stackexchange.com/a/64227/20260">Sp3000's answer</a>.</p>
-</div>
-<div id="pu1" class="pu"><h2>Python 3, 350 bytes</h2>
-<p>first golf</p>
-<pre><code>x = [f&quot;&quot;&quot;{i if i!=0 else&quot;No more&quot;} bottle{(i!=1)*&quot;s&quot;} of beer on the wall, {i if i!=0 else&quot;no more&quot;} bottle{(i!=1)*&quot;s&quot;} of beer.
-{&quot;Take one down and pass it around&quot;if i!=0else&quot;Go to the store and buy some more&quot;}, {&quot;no more&quot; if i-1==0else&quot;99&quot;if i==0else i-1} bottle{((i-1)!=1)*&quot;s&quot;} of beer on the wall.
-&quot;&quot;&quot;for i in range(99,-1,-1)]
-print(&quot;\n&quot;.join(x))
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h1>Java, 274 bytes. Java 21+: 245 bytes</h1>
 <p><strong>Java -v20:</strong></p>
