--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240825T061300Z
+"   /golfscore                                      20240825T063805Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/25279.html">Remove a letter to make a palindrome            : 0025279</a>
 <a href="q/100898.html">Turn this array into a matrix                   : 0100898</a>
 <a href="q/62886.html">Tiny Lisp tiny interpreter                      : 0062886</a>
 <a href="q/85786.html">Dijkstras Challenge                             : 0085786</a>
