--- a/q/275100.html
+++ b/q/275100.html
@@ -46,6 +46,13 @@ a←⌽x⋄b←d⋄c←⌽d
 ⍎s
 </code></pre>
 <p><a href="https://tio.run/##bVDBasJAEL3PV8xtDCaHapr2FwRLrkLxsNlgCQQsycVcRVS0ES/9iZ577c/Mj6QzmaZIKbsL7817b2d23WsZ5Y0r1y@RL11dF77jy/vTnPfXKQiapYLugI@HVVcoxAQneI9TfMQYH8BJLZNDi8gW8XnntZCObRFUSkejGCfcfrogJEKi8IdnwYB8EHD70YtyB0EtsSrk4ykRkU9b0l7uuViKqi0zg9rMG6SwAm4vNWzUaVPZWMNUmst7QZQ0Hct0faC5DQzPMLMFY377kp2bXa2J0OYf141F2OaP49fQyZdCtwL4Bg" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
+<p>Explanation by row of the function</p>
+<p>[1] assign the indices to do the Singer 7-cycle as described in the example link</p>
+<p>[2] assign the first main brick, the first 2 columns and the second 2 columns of the first main block as 8 element vectors</p>
+<p>[3] format the output in the required form</p>
+<p>[4] define the code to carry out the Singer 7-cycle for the first main brick and block and the 6 bricks and blocks under them and output the results</p>
+<p>[5]execute that code</p>
+<p>[6-13] repeat [2] and [5] for each main brick and block in turn with some attempt to golf the input vectors</p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES11), 208 bytes</h1>
 <p>Returns a single string, using the symbols suggested in the challenge.</p>
