--- a/q/275100.html
+++ b/q/275100.html
@@ -26,11 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>183</td><td>JavaScript ES6</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
-<tr d-ix="1"><td>225</td><td>APL+WIN</td><td>240824T131230Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275128#275128">Graham</a></td></tr>
-<tr d-ix="2"><td>065</td><td>Jelly</td><td>240823T232413Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275118#275118">Jonathan</a></td></tr>
+<tr d-ix="0"><td>087</td><td>Charcoal</td><td>240825T122525Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275138#275138">Neil</a></td></tr>
+<tr d-ix="1"><td>183</td><td>JavaScript ES6</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
+<tr d-ix="2"><td>225</td><td>APL+WIN</td><td>240824T131230Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275128#275128">Graham</a></td></tr>
+<tr d-ix="3"><td>065</td><td>Jelly</td><td>240823T232413Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275118#275118">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 183 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 87 bytes</h1>
+<pre><code>⊞υ⭆+O-X-X×⁴ιＦ⁴⊞υ⁺⭆¹⁶§X-O+⎇›κ⁷κ⁻｜κι＆κι⭆²⭆⁴§-X⁼¬ι⁼κ⁼μιＦ³⁵«⊞υ⭆⪪§υι⁸⭆⁸§κ⊘⁺⁴×⁹μ↓⪪⪪§υι⁴¦⁴Ｍ⁸¦⁵
+</code></pre>
+<p><a href="https://tio.run/##bVBNT8MgGD5vv4L09JLRg8p009OMRj3UNpmHXsmKjozCBNppjL8dadfaGkdCeD/yfPBstsxsNJPeZ5XdQkXQ2hmh3hK2h2iWxnmcRwS9iJJboAQJjPHN9FUbBBSjHpLJysKAO7skaOWeVME/IMrjdNYwcKOY@YQHw5njBnYEXWGCwpMIFdC3wh2E5Wm7EWHTDVaqOE6aMzZ3Pm7oSLA1fP9eMWnhWTtoyLp291uVPeXwn4s5Rl/Tyf8Y1nspHPT81dHe4o@ZxaAfNB6ZrHkBbSq0D29JUNnJTbKAc3B9pw8qsLT0J0VoextEomveqMxD8@29j2v5Aw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Uses the method of the linked PDF but outputs the results in row-major rather than column-major order.</p>
+<pre><code>⊞υ⭆+O-X-X×⁴ι
+</code></pre>
+<p>Each block is represented by 24 characters as viewed with a 90° rotation, so the first block is <code>++++OOOO----XXXX----XXXX</code>.</p>
+<pre><code>Ｆ⁴⊞υ⁺⭆¹⁶§X-O+⎇›κ⁷κ⁻｜κι＆κι⭆²⭆⁴§-X⁼¬ι⁼κ⁼μι
+</code></pre>
+<p>Generate the next four blocks.</p>
+<pre><code>Ｆ³⁵«
+</code></pre>
+<p>Repeat for each of the 35 octads.</p>
+<pre><code>⊞υ⭆⪪§υι⁸⭆⁸§κ⊘⁺⁴×⁹μ
+</code></pre>
+<p>Generate the <code>n+5</code>th octad by splitting the current octad into groups of <code>8</code>, then within each group cyclically taking every <code>4½</code>th character starting at the third.</p>
+<pre><code>↓⪪⪪§υι⁴¦⁴
+</code></pre>
+<p>Output the current octad, but pretty-printed and rotated.</p>
+<pre><code>Ｍ⁸¦⁵
+</code></pre>
+<p>Move to where the next octad is to be printed.</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 183 bytes</h1>
 <p>Returns a single string, using the symbols suggested in the challenge.</p>
 <p>Most time was spent understanding how this damned MOG thing works. I'm sure golfier solutions exist.</p>
 
@@ -51,7 +75,7 @@
 <li>we convert each matrix to ASCII and apply the requested formatting</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1>APL+WIN, 225 bytes</h1>
+<div id="pu2" class="pu"><h1>APL+WIN, 225 bytes</h1>
 <pre><code>i←1 6 2 5 3 8 4 7
 a←b←'X-X-X-X-'⋄c←'O+O+O+O+'
 r←'((4 2⍴a),'' '',(4 2⍴b),(4 2⍴c))⍪'' ''⋄'
@@ -75,7 +99,7 @@ a←⌽x⋄b←d⋄c←⌽d
 <p>[5]execute that code</p>
 <p>[6-13] repeat [2] and [5] for each main brick and block in turn with some attempt to golf the input vectors</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 65 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 65 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="noreferrer">bytes</a></h1>
 <p><em>Whew!</em></p>
 <pre><code>4R8œ?$ṚƭƬ;&quot;`p`ḣ4Jx4ṁƲ;$Q“ṅ⁷ṆŻ§‘BW€¤;&quot;œ?@€€Ƭ⁽¥ọẎŒH€Z€Zż€ʋ€⁶Y€j⁾¶¶F
 </code></pre>
