--- a/q/275100.html
+++ b/q/275100.html
@@ -26,20 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>181</td><td>JavaScript ES6</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
+<tr d-ix="0"><td>179</td><td>JavaScript ES6</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
 <tr d-ix="1"><td>087</td><td>Charcoal</td><td>240825T122525Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275138#275138">Neil</a></td></tr>
 <tr d-ix="2"><td>225</td><td>APL+WIN</td><td>240824T131230Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275128#275128">Graham</a></td></tr>
 <tr d-ix="3"><td>065</td><td>Jelly</td><td>240823T232413Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275118#275118">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 181 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 179 bytes</h1>
 <p>Returns a single string, using the symbols suggested in the challenge.</p>
 <p>Most time was spent understanding how this damned MOG thing works. I'm sure golfier solutions exist.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>f=(p=5)=&gt;p--?(g=(k,M,m=[])=&gt;k?(h=i=&gt;i&gt;23?`
+<pre class="lang-javascript prettyprint-override"><code>f=p=&gt;p&gt;4?&quot;&quot;:(g=(k,M,m=[])=&gt;k?(h=i=&gt;i&gt;23?`
 `+g(k-1,m):&quot;X-O+&quot;[x=i%6,y=i/6,q=p^y^3,m[i]=M?M[6*(i%2*2|y/2)+x^y&amp;1]:p&gt;3?57%~x:[!!q,y,q][x&gt;&gt;1]^!x]+[[`
-`,,&quot; &quot;][++i%6]]+h(i))(0):f(p))(7):&quot;&quot;
+`,,&quot; &quot;][++i%6]]+h(i))(0):f(-~p))(7)
 </code></pre>
-<p><a href="https://tio.run/##DY3RaoMwFEDf9xUz4Lhpbtap1IJwky@QvQ5CpKWtNrPWuI6RwNivu7wdzsM5n8ef4@P05fy3vM/ny7r2BJ52nJSXUsNAMGKLExmb1KjhSo6UU2WlD08HMcAoC5x4wz7ku2AmkMtrjOS2NS7ku9hVOBlnqdWtqTfg8nJT/sZtyUXo4kthG68qvdvnf6ExWbZgxMWaoFRhuyxYYUy6ILJnZo0QqW2tuILjHN5404NPsE9ztp7m@2O@XV5v8wA9cL7@Aw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##fVRRb5tADH7vr7ie1OnoYWjSrZ1SQZ72WN1DX06iRM0oJawEKNAp0bb@9cz2kUydoiYSxj7b3/fZJ34sfy77rCvbAermMd@Focg3bZ4N@aNoXof2dfDFshePOSV9x2BZi2GVi2y1rKq8LvKTrKn74V9RJKQFYcHojwxYAVabj7z3QWuFtcYACACtRzMGj7bel7@rO@odbQ0UxB95AGiMYSCtOcUay3VkMEUDw5LBM23JM4AcLHtUjh7Y/RnHYJ8CfIjk6S@0YfJkqBxD4IDAAWGQcRCBwF0KBjHfaacKV449LbFHDSzFGK1Zg5uZYdZsqDUrYkMamBIeMQJ6hEDgdn@mLSsaUzCB50lIhM5c2IALOiALewRqSQg0j0MK8uN5Mm0uZw1Md9wK7Ys1AE/XcBfeIrXmuXAiaeDp4oNloseKHE/nYXtjxyCW0zU7XDeqZhLghuy4ODxGoD2wIsR2q2LRlEcpdlwjD8RanjwAS6HLRmeapVij3Yq5J@gRwbhZ83Qxn2@IZoLk2YOHDw1jkPZg3Dw178jw1eCWloPW7vEYiDTwzcJ3tz9eAFFhDSyaQjJYL4dspcLg1/Trn7DwbnZPURvFbfx5LuVMFZF69m/9dZSkXhQ/z9UqKqO4jKeX84eTB12oZ5j4a28maUoy2UTl2ZW/jcrwyn@J2sV2cemvkzKNbue3ydW5Ks@m59Pf23Dq6c1i@2mSztr4cv7l@uxtM0tOT1/8rf@SJps4nqSL002qkwRRfF8KmSZaY@801StVep668GZPCt5afL32du5j1eU9fqeelHczfr2WXYcBDAd9W5WDkvf1fS29oK/KLFcXvoCJhwNoFdbFog@6vK2WeBLe12HhCyk9bMW9mioPqqZQ2DHom25QXjA0d0NX1oXyRBQdPpRHTudC3r1mWd73UsyE/NZ1TSdHjvu@/7lIGTfxFw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Method</h3>
 <p>In a nutshell:</p>
 <ul>
