--- a/q/275101.html
+++ b/q/275101.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>048</td><td>Haskell</td><td>240824T203417Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275133#275133">DPD-</a></td></tr>
+<tr d-ix="0"><td>047</td><td>Haskell</td><td>240824T203417Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275133#275133">DPD-</a></td></tr>
 <tr d-ix="1"><td>059</td><td>Python</td><td>240824T064748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275122#275122">Albert.L</a></td></tr>
 <tr d-ix="2"><td>049</td><td>Desmos</td><td>240823T022855Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275106#275106">Lucenapo</a></td></tr>
 <tr d-ix="3"><td>023</td><td>Charcoal</td><td>240822T232814Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275103#275103">Neil</a></td></tr>
@@ -39,21 +39,26 @@
 <tr d-ix="10"><td>015</td><td>05AB1E</td><td>240823T075842Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275108#275108">Kevin Cr</a></td></tr>
 <tr d-ix="11"><td>055</td><td>JavaScript Node.js</td><td>240823T004341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275101/calculate-the-sum-of-numbers-in-a-rectangle/275105#275105">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Haskell, <a href="https://tio.run/##fc07DsMgEATQ3qeYgiqWEZBPZfsE6VIiCgyxiOJPBLZyfLIcwNEUW8zTTrDp/ZymnEdYDHDwXdpnFlrWa8u5M@2p1wPn3lQBEa60WnIea2dql2f7WtDBrxXw2bfHFu8LGFJYv3RGCIqEQtNAiQOjyNxIkZGXI1SeKJwLuso/YyVkRP4B" rel="nofollow noreferrer"><s>53</s></a> 48 bytes</h1>
+<div id="pu0" class="pu"><h1>Haskell, <a href="https://tio.run/##fc07DsMgEATQ3qeYgiqWEZBPZfsE6VIiCgyxiOJPBLZyfLIcwNEUW8zTTrDp/ZymnEdYDHDwXdpnFlrWa8u5M@2p1wPn3lQBEa60WnIea2dql2f7WtDBrxXw2bfHFu8LGFJYv3RGCIqEQtNAiQOjyNxIkZGXI1SeKJwLuso/YyVkRP4B" rel="nofollow noreferrer"><s>53</s></a> <a href="https://tio.run/##fc09DsIwDAXgnVO8ga3ESsLPRG/AxlhlSB2qIvqDklYs3D04Byh6svyGT3bv0@sxDDl38GjBCHVax6aMIYoVu4q/8aoaT8TuwNJaouBcHv1zQo0w74D3utyXeJuwR@rnj6wOWmJgoRSs3jBWzEWUGHPaQuWIxbGgs/nzrESMzj8" rel="nofollow noreferrer"><s>48</s></a> 47 bytes</h1>
 <ul>
 <li>-5 bytes thanks to xnor</li>
+<li>-1 byte thanks to Wheat Wizard ♦</li>
 </ul>
-<pre class="lang-hs prettyprint-override"><code>f a b c d=sum[sum[1..r+c]+c|r&lt;-[a..c],c&lt;-[b..d]]
+<pre class="lang-hs prettyprint-override"><code>f a b c d=sum$do i&lt;-[a..c];j&lt;-[b..d];j:[1..i+j]
 </code></pre>
-<p><a href="https://tio.run/##fc09DsIwDAXgnVO8ga3ESsLPRG/AxlhlSB2qIvqDklYs3D04Byh6svyGT3bv0@sxDDl38GjBCHVax6aMIYoVu4q/8aoaT8TuwNJaouBcHv1zQo0w74D3utyXeJuwR@rnj6wOWmJgoRSs3jBWzEWUGHPaQuWIxbGgs/nzrESMzj8" rel="nofollow noreferrer">Try it online!</a></p>
+<p><a href="https://tio.run/##fc07DoMwEATQPqeYgi7yyjZJChJukC4lojA4CPNzFINyfGd9ANAUO8XTbG/C@J6mGDsYNGhhy7DNmfVwD1EZora@D9waIsutqBSROw91nI1bUML6E/DZ1tf6fS7IEHr/49NBchQ0hICWO0azubFioy57KI1o5Ald1cGzFDYy/gE" rel="nofollow noreferrer">Try it online!</a></p>
+<p>The code above is equivalent to:</p>
+<pre class="lang-hs prettyprint-override"><code>f a b c d = sum[h i j | i&lt;-[a..c], j&lt;-[b..d]]
+h r c = sum[0..r+c] + c
+</code></pre>
 <ul>
-<li>the helper function <code>sum[1..r+c]+c</code> (let's call it <code>h</code>) computes the value for row <code>r</code> and column <code>c</code>
+<li>the helper function <code>h</code> computes the value for row <code>r</code> and column <code>c</code>
 <ul>
 <li>The value in the first column is equal to the number of elements in the upper triangle, i.e. the (anti-)diagonals above. Each diagonal has one more element than the preceding: <span class="math-container">$$h(r,0) =0+1+2+3+4+...+r=\sum_{i=0}^ri$$</span></li>
 <li>To compute a general element we can compute the leftmost value of its (anti)diagonal (i.e. h(r+c,0)) and then go up by c steps (i.e. sum c): <span class="math-container">$$h(r,c)=h(r+c,0)+c$$</span></li>
 </ul>
 </li>
-<li><code>[sum[1..r+c]+c|r&lt;-[a..c],c&lt;-[b..d]]</code> applies <code>h</code> to all pairs (a,b), (a,b+1), ..., (a,d), (a+1,b), (a+1, b+1,), ..., (c,d)</li>
+<li><code>[h i j | i&lt;-[a..c], j&lt;-[b..d]]</code> applies <code>h</code> to all pairs (a,b), (a,b+1), ..., (a,d), (a+1,b), (a+1, b+1,), ..., (c,d)</li>
 </ul>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <strike>61</strike> 59 bytes</h1>
